# data_viz_club

./: .gitignore
hot_hand/: hothand.ipynb
ib_gap/ib_processing/: ib_processing.js  index.html
minutiae-data_viz/: Plotly_example.ipynb  image_downloader.py  image_filelist.txt  minutiae_viz.ipynb  pyproject.toml
minutiae-data_viz/data/: carbon-footprint-travel-mode.csv  minutiae-production-jXtvmUtPb4aRNmVJ9ZcsO0eD8dA3-export.json  minutiae_djw_clean.csv  minutiae_djw_clean_weather.csv  newTiming_Sept11.csv
minutiae-data_viz/processing/minutiae_viz/: index.html  minutiae_viz.js
minutiae-data_viz/processing/minutiae_viz_java/minutiae_viz/: minutiae_viz.pde
minutiae-data_viz/processing/minutiae_viz_java/minutiae_viz/assets/: minutiae_data_frame.csv  minutiae_w_captions.csv
minutiae-data_viz/tests/: test_minutiae_data_viz.py
sp500/: sp500_models.ipynb
stanford_hackathon/: Untitled.ipynb  world_university_rankings_2016_to_2021_updated.csv
vib_measure/: measure_streamlit_v1.py  requirements.txt
vib_measure/data/: streamlit.csv  streamlit_demo.csv
